// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render with Classified in grey label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
    >
      <span
        className="classifiedLabel"
      >
        Classified
      </span>
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      intimate={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with bold keyword 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
    >
      SEEK Asia
    </Text>
    <div>
      <Text
        baseline={true}
        className="positionTitle"
        key="0"
        regular={false}
        waving={true}
      >
        Senior
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="1"
        regular={true}
        waving={true}
      >
         Software 
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="2"
        regular={false}
        waving={true}
      >
        Engineer
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="3"
        regular={true}
        waving={true}
      >
         (6 months Contract)
      </Text>
    </div>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      intimate={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with company confidential in grey label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
    >
      <span
        className="confidentialLabel"
      >
        Company Confidential
      </span>
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      intimate={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      intimate={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with featured label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
    >
      <span
        className="featuredLabel"
      >
        Feature
      </span>
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      intimate={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with selling points props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="sellingPointsSection"
  >
    <ul
      className="sellingPointsList"
    >
      <li
        key="0"
      >
        <Text
          baseline={true}
          className="sellingPoint"
          intimate={true}
        >
          We practice a vibrant & energetic office culture
        </Text>
      </li>
      <li
        key="1"
      >
        <Text
          baseline={true}
          className="sellingPoint"
          intimate={true}
        >
          Our company supports a fun yet balanced working environment
        </Text>
      </li>
      <li
        key="2"
      >
        <Text
          baseline={true}
          className="sellingPoint"
          intimate={true}
        >
          We support a safe environment for our employees
        </Text>
      </li>
    </ul>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      intimate={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;
